# openpose_ros_visualization

openpose_ros_pkg/: CMakeLists.txt
openpose_ros_pkg/src/: openpose_ros_node_3d.cpp
skeleton_extract_3d/launch/: openpose_skeleton_extract.launch
skeleton_extract_3d/src/: skeleton_extract_3d_node.cpp
